# FreyaProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
assets/: assets_list.frlist
cmake/: variables.cmake
scripts/: build-project.ps1
src/: app.cpp  app.h  main.cpp
